# ierc20_mint_rs

./: .env  Cargo.toml  readme.md
src/: initialization.rs  main.rs
